--- a/report.bib
+++ b/report.bib
@@ -1,3 +1,75 @@
+@inproceedings{walshaw2000multilevel,
+  title={A multilevel algorithm for force-directed graph drawing},
+  author={Walshaw, Chris},
+  booktitle={International Symposium on Graph Drawing},
+  pages={171--182},
+  year={2000},
+  organization={Springer}
+}
+@techreport{sandvig2005aacorn,
+  title={Aacorn: A CBR recommender for academic advising},
+  author={Sandvig, J and Burke, Robin},
+  year={2005},
+  institution={Technical Report TR05-015, DePaul University}
+}
+@book{anglin1994mathematics,
+  title={Mathematics: A Concise History and Philosophy: A Concise History and Philosophy},
+  author={Anglin, W.S.},
+  isbn={9780387942803},
+  lccn={96165013},
+  series={Readings in Mathematics},
+  url={https://books.google.com/books?id=13dKav77vGsC},
+  year={1994},
+  publisher={Springer New York}
+}
+@book{schwartz2009paradox,
+  title={The Paradox of Choice: Why More Is Less, Revised Edition},
+  author={Schwartz, B.},
+  isbn={9780061748998},
+  url={https://books.google.com/books?id=g422yyua-P8C},
+  year={2009},
+  publisher={HarperCollins}
+}
+@inproceedings{bendakir2006using,
+  title={Using association rules for course recommendation},
+  author={Bendakir, Narimel and A{\"\i}meur, Esma},
+  booktitle={Proceedings of the AAAI Workshop on Educational Data Mining},
+  volume={3},
+  year={2006}
+}
+@inproceedings{Shneiderman:1996:ETD:832277.834354,
+ author = {Shneiderman, Ben},
+ title = {The Eyes Have It: A Task by Data Type Taxonomy for Information Visualizations},
+ booktitle = {Proceedings of the 1996 IEEE Symposium on Visual Languages},
+ series = {VL '96},
+ year = {1996},
+ isbn = {0-8186-7508-X},
+ pages = {336--},
+ url = {http://dl.acm.org/citation.cfm?id=832277.834354},
+ acmid = {834354},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {visualization, information visualization, graphical user interfaces},
+} 
+@article{Su:2009:SCF:1592474.1722966,
+ author = {Su, Xiaoyuan and Khoshgoftaar, Taghi M.},
+ title = {A Survey of Collaborative Filtering Techniques},
+ journal = {Adv. in Artif. Intell.},
+ issue_date = {January 2009},
+ volume = {2009},
+ month = jan,
+ year = {2009},
+ issn = {1687-7470},
+ pages = {4:2--4:2},
+ articleno = {4},
+ numpages = {1},
+ url = {http://dx.doi.org/10.1155/2009/421425},
+ doi = {10.1155/2009/421425},
+ acmid = {1722966},
+ publisher = {Hindawi Publishing Corp.},
+ address = {New York, NY, United States},
+} 
+
 @inproceedings{Moritz:2015:EuroVis,
   author = {Moritz, Dominik and Halperin, Daniel and Howe, Bill and Heer, Jeffrey},
   title = {Perfopticon: Visual Query Analysis for Distributed Databases},
