--- a/conclusion.tex
+++ b/conclusion.tex
@@ -6,5 +6,10 @@ Now let's review our tasks listed in Section 1.
 The prototype looks promising for now, since it reveals that our initial prediction of matrix layout is wrong. This means that it is likely to be wiser than our intuition. We thus conclude that the project is successful. 
 
 For the work we should do but don't have time.
+mouse toggle
+color map
+for course pair A,B, comparing student taking A and B with students taking A but not B.
 
 For the work we leave as future directions.
+scalability
+formal evaluation as discussed already
