--- a/intro.tex
+++ b/intro.tex
@@ -11,6 +11,6 @@ The aims of this research are:
 \begin{itemize}
   \item provide a tool to visualize coursework contents similarity based on student membership.
   \item explore different diagrams to handle the complexity of information
-  \item study simliarity metrics of two courses based on grade history of one student and multiple students.
+  \item study similarity metrics of two courses based on grade history of one student and multiple students.
 \end{itemize}
 
