--- a/report.tex
+++ b/report.tex
@@ -56,7 +56,7 @@
 \authorfooter{
 %% insert punctuation at end of each item
 \item
- E-mail:[yangliu2014,your NetID2]@email.arizona.edu.
+ E-mail:[yangliu2014,zhengezhao]@email.arizona.edu.
 }
 
 %other entries to be set up for journal
@@ -73,7 +73,7 @@ We haven't got to the evaluation part yet. Plans will be discussed in Section~\r
 
 %% Keywords that describe your work. Will show as 'Index Terms' in journal
 %% please capitalize first letter and insert punctuation after last keyword
-%\keywords{Radiosity, global illumination, constant time}
+\keywords{Visualization tool, Correlation Coefficient, Acdemic Advising}
 
 %% ACM Computing Classification System (CCS). 
 %% See <http://www.acm.org/class/1998/> for details.
@@ -89,7 +89,7 @@ We haven't got to the evaluation part yet. Plans will be discussed in Section~\r
    \teaser{
    \centering
    \includegraphics[width=16cm]{figs/perfvis}
-   \caption{CHANGE ME: Some of you may want a big teaser figure.}
+   \caption{The interface of Coursim: (A) adjacency matrix view to show the overall associations between all the courses in CS department; (B) bar chart view to depict top 10 courses which benefit the chosen course; (C) parallel coordinate view to demonstrates all the transition of scores of students taking both two courses}
   }
 
 %% Uncomment below to disable the manuscript note
