--- a/intro.tex
+++ b/intro.tex
@@ -9,7 +9,7 @@ While some course dependencies have already been explicitly annotated in practic
 % Maybe you want to use a list:
 The aims of this research are:
 \begin{itemize}
-  \item provide a tool to visualize coursework contents similarity based on student membership.
+  \item provide a tool to visualize coursework contents similarity based on student performance.
   \item explore different diagrams to handle the complexity of information
   \item study similarity metrics of two courses based on grade history of one student and multiple students.
 \end{itemize}
