--- a/report.bib
+++ b/report.bib
@@ -135,3 +135,87 @@
 	publisher = {IEEE Computer Society},
 	address = {Los Alamitos},
 }
+@article{Reingold:1981:TDT:1313316.1313481,
+ author = {Reingold, E. M. and Tilford, J. S.},
+ title = {Tidier Drawings of Trees},
+ journal = {IEEE Trans. Softw. Eng.},
+ issue_date = {March 1981},
+ volume = {7},
+ number = {2},
+ month = mar,
+ year = {1981},
+ issn = {0098-5589},
+ pages = {223--228},
+ numpages = {6},
+ url = {http://dx.doi.org/10.1109/TSE.1981.234519},
+ doi = {10.1109/TSE.1981.234519},
+ acmid = {1313481},
+ publisher = {IEEE Press},
+ address = {Piscataway, NJ, USA},
+ keywords = {Data structures, tree structures, tree structures, Data structures, trees, trees},
+} 
+@inproceedings{VanHam:2003:UMC:1947368.1947409,
+ author = {Van Ham, Frank},
+ title = {Using Multilevel Call Matrices in Large Software Projects},
+ booktitle = {Proceedings of the Ninth Annual IEEE Conference on Information Visualization},
+ series = {INFOVIS'03},
+ year = {2003},
+ isbn = {0-7803-8154-8},
+ location = {Seattle, Washington},
+ pages = {227--232},
+ numpages = {6},
+ url = {http://dl.acm.org/citation.cfm?id=1947368.1947409},
+ acmid = {1947409},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {call matrix, multilevel visualization, software visualization},
+} 
+@inproceedings{Ghoniem:2004:CRG:1038262.1038777,
+ author = {Ghoniem, Mohammad and Fekete, Jean-Daniel and Castagliola, Philippe},
+ title = {A Comparison of the Readability of Graphs Using Node-Link and Matrix-Based Representations},
+ booktitle = {Proceedings of the IEEE Symposium on Information Visualization},
+ series = {INFOVIS '04},
+ year = {2004},
+ isbn = {0-7803-8779-3},
+ pages = {17--24},
+ numpages = {8},
+ url = {http://dx.doi.org/10.1109/INFOVIS.2004.1},
+ doi = {10.1109/INFOVIS.2004.1},
+ acmid = {1038777},
+ publisher = {IEEE Computer Society},
+ address = {Washington, DC, USA},
+ keywords = {Visualization of graphs, adjacency matrices, node-link representation, readability, evaluation},
+} 
+ @inproceedings{du2016vis,
+author = {Du, Fan and Plaisant, Catherine and Spring, Neil and Shneiderman, Ben},
+title = {EventAction: Visual Analytics for Temporal Event Sequence Recommendation},
+booktitle = {Proceedings of the IEEE Visual Analytics Science and Technology},
+pages = {1--10},
+numpages = {10},
+series = {VAST '16},
+year = {2016},
+location = {Baltimore, Maryland, USA},
+publisher = {IEEE},
+keywords = {temporal event sequences, recommender systems, prescriptive analytics, visual analytics},
+}
+@article{Bostock:2011:DDD:2068462.2068631,
+ author = {Bostock, Michael and Ogievetsky, Vadim and Heer, Jeffrey},
+ title = {D3 Data-Driven Documents},
+ journal = {IEEE Transactions on Visualization and Computer Graphics},
+ issue_date = {December 2011},
+ volume = {17},
+ number = {12},
+ month = dec,
+ year = {2011},
+ issn = {1077-2626},
+ pages = {2301--2309},
+ numpages = {9},
+ url = {http://dx.doi.org/10.1109/TVCG.2011.185},
+ doi = {10.1109/TVCG.2011.185},
+ acmid = {2068631},
+ publisher = {IEEE Educational Activities Department},
+ address = {Piscataway, NJ, USA},
+ keywords = {Information visualization, user interfaces, toolkits, 2D graphics.},
+} 
+
+
