--- a/report.tex
+++ b/report.tex
@@ -26,7 +26,7 @@
   \usepackage{graphicx}                % allow us to embed graphics files
   \DeclareGraphicsExtensions{.eps}     % for pure latex we expect eps files
 \fi%
-
+\usepackage[justification=centering]{caption}
 %% it is recomended to use ``\autoref{sec:bla}'' instead of ``Fig.~\ref{sec:bla}''
 \graphicspath{{figures/}{pictures/}{images/}{./}} % where to search for the images
 
@@ -73,7 +73,7 @@ We haven't got to the evaluation part yet. Plans will be discussed in Section~\r
 
 %% Keywords that describe your work. Will show as 'Index Terms' in journal
 %% please capitalize first letter and insert punctuation after last keyword
-\keywords{Visualization tool, Correlation Coefficient, Acdemic Advising}
+\keywords{Visualization tool, Benefit Measurement, Acdemic Advising}
 
 %% ACM Computing Classification System (CCS). 
 %% See <http://www.acm.org/class/1998/> for details.
