--- a/conclusion.tex
+++ b/conclusion.tex
@@ -18,6 +18,8 @@ For the work we should do but don't have time.
 For the work we leave as future directions.
 \begin{itemize}
 \item Even with the adjacency matrix representation, the screen gets filled up when we study courses at university wide level. That brings us to focus on courses from one department only(a kind of filtering). Perhaps a selection box be added to support data for other department in future. It is also worth considering, if other selection, aggregation methods exist to show more data in the screen.
-
+\item Some universities use letters instead of scores, for scalability, a future work should be carried on how to deal with the grade without scores
+\item Show the bar chart of the students who don't take the pre-course for comparison
 \item Also a formal evaluation as discussed already should be carried out. 
+\item Instead of showing just Major+Number as the course ID, we also want to include the course name and a brief introduction of the course so that users will know which course it actually is.
 \end{itemize}
