--- a/evaluation.tex
+++ b/evaluation.tex
@@ -1,19 +1,15 @@
-\section{Evaluation: CHANGE ME -- might be 'Case Studies' or 'User Studies' or
-'Results' (if a controlled experiment) or just 'Evaluation'} % or "Research Plan"
+\section{Evaluation} % or "Research Plan"
 \label{sec:vis}
 
-Describe your evaluation and/or results here. 
+In this section, we show some user studies and the results of your visualization. Since our data comes from a real world university, we can actually know the contents of each course and by consoling computer scientists, we can see if Coursim actually gives us some good perquisites for a chosen course. We also show our evaluation plan here for doing an actual user study.
 
 \subsection{Usage Scenario}
 \label{sec:usage}
 
-This subsection is where we deviate from the format so the instructor has a
-better idea of what you've done -- if designing a new visualization, describe
-a usage scenario here. If your project is an experiment, an earlier section
-should describe what you intend the users to do and/or what the users did in
-your pilot study. You should still describe your ideal plan for evaluation
-below. If you have case studies or user studies, put this subsection in the
-visual design section instead. 
+This case study shows three different usages of this tool. First, when a student comes to his advisor and asked him a question like “what courses do I need to take this semester if I eventually want to take CS482?” The professor doesn’t know how much about CS482, actually the professor is just a Math Doctor which his student takes the CS as a minor. But using our tool, when can find the course CS482 in the adjacency matrix and click the column. Then in the bar chart ( Fig. 8), he can easily figure out that the CS130 and CS343 have the highest benchmarks. Then he moves to the matrix and clicks on the gird of pair CS130 –CS482 and CS343-CS482. The parallel oordinates tell him the most the students are enhanced if they have taken CS130 and CS343. With this knowledge in mind, he can advise the two courses to his students without knowing what actually the two courses are. What's more, another interesting question a student may be wondering is that if he has taken a course, which course he may take next which will be easiler for him to get a high score. For this purpose, he can find the row of that course, and go through the row and find out the red girds. Then he can click on it and see the details in the bar chart and parallel coordinates. The last example is that it can be used to evaluate the setting of  the current prerequisites. We can easily achieve that by finding out the pair of courses and watch its actual ranks in the barchart. Using the bar chart and parallel, a professor can figure out if the current prerequisites is a good. Are there any other hidden prerequisites which have a higher benefit than the current one? Or what’s actual performance looks like for students taking the prerequisites?
+
+After plotting the pictures, we want to find out if the benchmarks work well. We pick up some pair of courses and find out the contents and titles of the university’s websites. The results shown are quite interesting. For example CS 365 and CS489, the benchmark we calculate is 11.2. CS365 is  Model of Computation and CS 489 is a topic course which includes Big Data Infrastructure, Complexity of Computational Problems and Introduction to Machine Learning, which include a lot of model computation.Some other pairs of courses with high benchmarks are also convinced by different domain specialists there are a lot of connections between these pairs. For instance, CS 135 Designing Functional Programs and CS 445: Software Requirements Specification and Analysis, CS 458: Computer Security and Privacy-CS 456 Computer Networks.
+
 
 \subsection{Evaluation Plan}
 \label{sec:plan}
